--- a/department-profile-parser/mapping.json
+++ b/department-profile-parser/mapping.json
@@ -1,6 +1,7 @@
 {
     "enrl_classes":{
-        "codetable":[
+        "output_sheet": "Dept Classes and Enrollments", 
+        "mapping":[
             [1  ,5  ,0],
             [3  ,165,1],
             [4  ,166,1],
@@ -102,7 +103,8 @@
     },
 
     "enrl_classes_MathStat":{
-        "codetable":[
+        "output_sheet": "Dept Classes and Enrollments",
+        "mapping":[
             [1  ,5  ,0],
             [3  ,181,1],
             [4  ,182,1],
@@ -216,7 +218,8 @@
     },
 
     "enrl_classes_faculty":{
-        "codetable":[
+        "output_sheet": "Dept Faculty and Instructors",
+        "mapping":[
             [1 ,5,0 ],
             [3 ,9, 0],
             [4 ,9, 1],
@@ -231,22 +234,26 @@
     },
 
     "enrl_classes_faculty_MathStat":{
-        "codetable":[
-            [1 ,5,0 ],
+        "output_sheet": "Dept Faculty and Instructors",
+        "mapping":[
+            [1 ,5, 0], 
             [3 ,9, 0],
             [4 ,9, 1],
             [5 ,10,0],
             [6 ,10,1],
-            [9 ,12,0],
-            [10,13,0],
-            [11,14,0],
-            [12,16,0],
-            [13,17,0] 
+            [7 ,11,0],
+            [8 ,11,1],
+            [9 ,13,0],
+            [10,14,0],
+            [11,15,0],
+            [12,17,0],
+            [13,18,0]
         ]
     },
 
     "enrl_classes_programs":{
-        "codetable":[
+        "output_sheet": "Dept Program Enrollments",
+        "mapping":[
             [1 , 5 , 0],
             [3 , 21, 0],
             [4 , 22, 0],
@@ -284,7 +291,8 @@
     },
 
     "enrl_classes_programs_MathStat":{
-        "codetable":[
+        "output_sheet": "Dept Program Enrollments",
+        "mapping":[
             [1 , 5 , 0],
             [3 , 22, 0],
             [4 , 23, 0],
