--- a/requirements.txt
+++ b/requirements.txt
@@ -2,34 +2,57 @@ astroid==2.2.5
 autopep8==1.4.4
 awsebcli==3.15.2
 beautifulsoup4==4.7.1
+blessed==1.15.0
+botocore==1.12.231
 bs4==0.0.1
+cached-property==1.5.1
+cement==2.8.2
 certifi==2019.3.9
 chardet==3.0.4
 colorama==0.4.1
 DateTime==4.3
+docker==3.7.3
+docker-compose==1.23.2
+docker-pycreds==0.4.0
+dockerpty==0.4.1
+docopt==0.6.2
+docutils==0.15.2
 et-xmlfile==1.0.1
+future==0.16.0
 idna==2.7
 isort==4.3.20
 jdcal==1.4.1
+jmespath==0.9.4
+jsonschema==2.6.0
 lazy-object-proxy==1.4.1
 lxml==4.3.4
 mccabe==0.6.1
 openpyxl==2.6.2
 pathlib==1.0.1
+pathspec==0.5.9
 pdf2image==1.6.0
 Pillow==6.1.0
+pyasn1==0.4.7
+pyasn1-modules==0.2.6
 pycodestyle==2.5.0
 pylint==2.3.1
 pypandoc==1.4
 pytesseract==0.2.7
+python-dateutil==2.8.0
 python-dotenv==0.10.3
+python-ldap==3.2.0
 pytz==2019.1
+PyYAML==3.13
 requests==2.20.1
 semantic-version==2.5.0
 six==1.12.0
 soupsieve==1.9.2
+termcolor==1.1.0
+texttable==0.9.1
 typed-ast==1.4.0
-urllib3==1.25.3
+urllib3==1.24.3
+wcwidth==0.1.7
+websocket-client==0.56.0
 wincertstore==0.2
 wrapt==1.11.1
 zope.interface==4.6.0
