stdev chart init

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 astroid==2.2.5
 autopep8==1.4.4
 awsebcli==3.15.2
+bandit==1.6.2
 beautifulsoup4==4.7.1
 blessed==1.15.0
 botocore==1.12.231
@@ -10,6 +11,7 @@ cement==2.8.2
 certifi==2019.3.9
 chardet==3.0.4
 colorama==0.4.1
+cycler==0.10.0
 DateTime==4.3
 docker==3.7.3
 docker-compose==1.23.2
@@ -17,42 +19,58 @@ docker-pycreds==0.4.0
 dockerpty==0.4.1
 docopt==0.6.2
 docutils==0.15.2
+entrypoints==0.3
 et-xmlfile==1.0.1
+flake8==3.7.9
 future==0.16.0
+gitdb2==2.0.6
+GitPython==3.0.4
 idna==2.7
 isort==4.3.20
 jdcal==1.4.1
 jmespath==0.9.4
 jsonschema==2.6.0
+kiwisolver==1.1.0
 lazy-object-proxy==1.4.1
+ldap3==2.6.1
 lxml==4.3.4
+matplotlib==3.1.2
 mccabe==0.6.1
+numpy==1.17.4
 openpyxl==2.6.2
+pandas==0.25.3
 pathlib==1.0.1
 pathspec==0.5.9
+pbr==5.4.3
 pdf2image==1.6.0
 Pillow==6.1.0
 pyasn1==0.4.7
 pyasn1-modules==0.2.6
 pycodestyle==2.5.0
+pyflakes==2.1.1
 pylint==2.3.1
 pypandoc==1.4
+pyparsing==2.4.5
+pypiwin32==223
 pytesseract==0.2.7
 python-dateutil==2.8.0
 python-dotenv==0.10.3
-python-ldap==3.2.0
 pytz==2019.1
+pywin32==225
 PyYAML==3.13
 requests==2.20.1
+scipy==1.4.0
 semantic-version==2.5.0
 six==1.12.0
+smmap2==2.0.5
 soupsieve==1.9.2
+stevedore==1.31.0
 termcolor==1.1.0
 texttable==0.9.1
 typed-ast==1.4.0
 urllib3==1.24.3
 wcwidth==0.1.7
 websocket-client==0.56.0
-wincertstore==0.2
 wrapt==1.11.1
+yapf==0.28.0
 zope.interface==4.6.0
