--- a/requirements.txt
+++ b/requirements.txt
@@ -35,11 +35,13 @@ lazy-object-proxy==1.4.1
 ldap3==2.6.1
 lxml==4.3.4
 MarkupSafe==1.1.1
-matplotlib==3.1.2
+matplotlib==3.2.0
 mccabe==0.6.1
+msg-parser==1.2.0
 numpy==1.17.4
+olefile==0.46
 openpyxl==2.6.4
-pandas==0.25.3
+pandas==1.0.1
 pathlib==1.0.1
 pathspec==0.5.9
 pbr==5.4.3
@@ -55,13 +57,14 @@ pyparsing==2.4.5
 pypiwin32==223
 pytesseract==0.2.7
 python-dateutil==2.8.0
+python-docx==0.8.10
 python-dotenv==0.10.3
 pytz==2019.1
 pywin32==225
 PyYAML==3.13
 requests==2.20.1
 s3transfer==0.3.3
-scipy==1.4.0
+scipy==1.4.1
 semantic-version==2.5.0
 six==1.12.0
 smmap2==2.0.5
