--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 astroid==2.2.5
 autopep8==1.4.4
 bandit==1.6.2
-beautifulsoup4==4.7.1
+beautifulsoup4==4.9.1
 blessed==1.15.0
 boto3==1.11.13
 botocore==1.14.13
@@ -38,6 +38,8 @@ MarkupSafe==1.1.1
 matplotlib==3.2.0
 mccabe==0.6.1
 msg-parser==1.2.0
+mypy==0.780
+mypy-extensions==0.4.3
 numpy==1.17.4
 olefile==0.46
 openpyxl==2.6.4
@@ -65,6 +67,7 @@ PyYAML==3.13
 requests==2.20.1
 s3transfer==0.3.3
 scipy==1.4.1
+selenium==3.141.0
 semantic-version==2.5.0
 six==1.12.0
 smmap2==2.0.5
@@ -73,6 +76,7 @@ stevedore==1.31.0
 termcolor==1.1.0
 texttable==0.9.1
 typed-ast==1.4.0
+typing-extensions==3.7.4.2
 urllib3==1.24.3
 wcwidth==0.1.7
 websocket-client==0.56.0
